--- a/src/components/coins.css
+++ b/src/components/coins.css
@@ -134,3 +134,9 @@
 .higherContainer{
     height: 1200px;
 }
+
+.NoFavsContainer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
