--- a/src/components/coins.css
+++ b/src/components/coins.css
@@ -6,6 +6,7 @@
 
 .coinname, .coinsymbol, .coinprice, .coinvolume, .marketcap, .coinfiller, .sparklines, .heart, .calculator{
     width:100px;
+    font-size:14px;
 }
 
 .coinimg{
@@ -94,7 +95,7 @@
 }
 
 .active{
-    font-size: 1.65em;
+    font-weight:bold;
     width: 50px;
     height: 50px;
     margin-left: 10px;
@@ -139,4 +140,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.top10title{
+    display:flex;
+    justify-content: start;
+    align-items: center;
+    font-size: 1.5em;
+    margin:5vh 0 0 8.5vw;
+}
+
+.top10title span{
+    color:red;
+}
+
+.pagination{
+    font-size:0.5em;
+}
+
+.pagination button{
+    width:3vw;
+    height:6vh;
 }
