--- a/src/components/favList.css
+++ b/src/components/favList.css
@@ -4,29 +4,43 @@
     box-sizing: border-box;
 }
 
+.favlist{
+    margin-top:5vh;
+}
+
 .favcontainer{
-    display:flex;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .favcoin{
-    display:grid;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1.75fr 1.75fr 1fr;
     align-items: center;
-    grid-template-columns: 1.25fr 1.25fr 1fr 1fr 1.5fr 1.5fr 1fr;
-    border-bottom:1px solid lightblue;
-    margin:10px;
-    width:80vw;
+    justify-content: center;
+    padding: 10px;
+    margin-top: 10px;
+    width:90vw;
+    border-bottom: 1px solid lightblue;
 }
 
 .favimg{
-    width:50px;
-    height:50px;
+    height: 50px;
+    width: 50px;
 }
 
-.NoFavsContainer{
+.NoFavs{
+    height:50vh;
     display:flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
+}
+
+.noFavsText{
+    display:flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
