--- a/src/components/aboutus/aboutus.css
+++ b/src/components/aboutus/aboutus.css
@@ -1,6 +1,7 @@
 
 
 .team-list {
+  margin-top: 10vh;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -8,12 +9,17 @@
 }
 
 .team-member {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: white;
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   width: 250px;
+  height:50vh;
   margin: 20px;
 }
 
