--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,10 +1,13 @@
 body{
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 .footer{
+    margin-top:10vh;
     width: 100%;
-    height: 224px;
+    height: 30vh;
     background-color: rgb(191,219,254);
     display: flex;
     flex-direction: column;
