--- a/src/components/header.css
+++ b/src/components/header.css
@@ -9,7 +9,7 @@ body{
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 10vh;
+    height: 12vh;
     background-color:rgb(30,41,59);
     border-radius:0 0 5px 5px;
     color: white;
@@ -32,6 +32,9 @@ body{
     text-decoration: none;
     color: white;
     text-align: center;
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .links{
@@ -50,4 +53,10 @@ body{
     font-weight:bold;
     font-size:0.8em;
     color:rgb(106, 131, 171);
+}
+
+.favIcon{
+    height: 30px;
+    width: 30px;
+    color: red;
 }
